--- a/botui/css/style.css
+++ b/botui/css/style.css
@@ -11,44 +11,49 @@ html, body {
   height:100%;
 
 }
-#chat-circle {
-  position: fixed;
-  bottom: 50px;
-  right: 50px;
-  background: #5A5EB9;
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  color: white;
-  padding: 28px;
-  cursor: pointer;
-  box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-}
 
-.ibtn .btn-info { color: #03a9f4; }
+/*** Excluded to make the bot in open mode ***/
 
-.material-icons.md-48 { 
-	font-size: 48px;
-	position:relative;
-	bottom:13px;
-	right:12px;
- }
+/* #chat-circle { */
+  /* position: fixed; */
+  /* bottom: 50px; */
+  /* right: 50px; */
+  /* background: #5A5EB9; */
+  /* width: 80px; */
+  /* height: 80px; */
+  /* border-radius: 50%; */
+  /* color: white; */
+  /* padding: 28px; */
+  /* cursor: pointer; */
+  /* box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.6), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12); */
+/* } */
+
+/* .ibtn .btn-info { color: #03a9f4; } */
+
+/* .material-icons.md-48 {  */
+	/* font-size: 48px; */
+	/* position:relative; */
+	/* bottom:13px; */
+	/* right:12px; */
+ /* } */
  
  
-#chat-overlay {
-    background: rgba(255,255,255,0.1);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    display: none;
-}
+/* #chat-overlay { */
+    /* background: rgba(255,255,255,0.1); */
+    /* position: absolute; */
+    /* top: 0; */
+    /* left: 0; */
+    /* width: 100%; */
+    /* height: 100%; */
+    /* border-radius: 50%; */
+    /* display: none; */
+/* } 
+
+/***** END *****/
 
 
 .chat-box {
-  display:none;
+  display:block; /*Added block to display the content */
   background: #efefef;
   position:fixed;
   right:30px;
