--- a/botui/css/style.css
+++ b/botui/css/style.css
@@ -65,11 +65,15 @@ html, body {
 /*   box-shadow: 0px 5px 35px 9px #464a92; */
   box-shadow: 0px 5px 35px 9px #ccc;
 }
+
+/*
 .chat-box-toggle {
   float:right;
   margin-right:15px;
   cursor:pointer;
 }
+*/
+
 .chat-box-header {
   background: #5A5EB9;
   height:70px;
